--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="<%= @description %>">
-    <meta name="author" content="Tim Regan-Porter">
+    <meta name="author" content="Yassir Qattan">
     <!-- TODO: generate a favicon -->
     <link rel="shortcut icon" href="/ico/favicon.ico">
 
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">TIM REGAN-PORTER</a>
+          <a class="navbar-brand" href="/">Yassir Qattan</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -111,14 +111,14 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+					<p><b>Student, Engineer & Gamer</b></p>
 				</div>
 			
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
+					<p>Living in the amazing USA.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<p>Y.Q.1993@hotmail.com.com</p>
 				</div>
 			</div>
 		</div>
