--- a/views/about.erb
+++ b/views/about.erb
@@ -10,10 +10,10 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>PAUL SILVA</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+				<h2>Yassir Qattan</h2>
+				<p>Yassir Qattan, a student from Saudia Arabia who came to USA to achieve his goals, he wants to become an engineer, however he is having issues and is trying to overcome them.
+                His hobbies are mostly spending most of his time on his PC playing video games, watching TV series / Anime, and surfing the web. </p>
+				
 			</div>
 
 		</div><! --/row -->
