--- a/views/home.erb
+++ b/views/home.erb
@@ -3,8 +3,8 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>TIM REGAN-PORTER</h1>
-					<h4>WEB DEVELOPER, JOURNALIST, & GEEK</h4>
+					<h1>Yassir Qattan</h1>
+					<h4>A University Student, A Wanna be Engineer, & a video Game Addict</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
